# Waspy

./: .gitignore  .npmrc  EMAIL_SETUP.md  README.md  commitlint.config.js  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  package.json  start-server.sh  stop-server.sh
.husky/: pre-commit
client/: env.example  next.config.ts  package.json  tailwind.config.ts
client/prisma/: schema.prisma
client/public/: robots.txt  (+1 more)
prisma/: schema.prisma
scripts/: generate-logos.js
server/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 1a7d2a67e9a9_fix_campaign_id_type.py  2ca830e14bac_initial.py  458a1c2d5321_.py  693e5e6f59b7_initial.py  d2d1d364e089_create_campaigns_table.py  df0010497536_.py
server/app/: __init__.py  main.py
server/app/api/: deps.py
server/app/api/v1/: __init__.py  router.py
server/app/api/v1/endpoints/: knowledge_base.py  whatsapp.py
server/app/api/v1/whatsapp/: router.py
server/app/core/: auth.py  config.py  logger.py  security.py  whatsapp.py
server/app/db/: base.py  base_class.py  init_db.py  session.py
server/app/models/: campaign.py  order.py  user.py
server/app/schemas/: campaign.py  dashboard.py  webhook.py  whatsapp.py
server/app/services/: campaign_service.py  knowledge_base_service.py  openai_service.py  whatsapp_bot.py  whatsapp_service.py
server/app/utils/: error_handler.py  errors.py  whatsapp_utils.py
server/scripts/: run_init_db.py
src/: auth.config.ts  auth.ts  prisma.ts
whatsapp-api/: index.js  package.json
(+105 files in other folders)
